--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 <a href="#" class="button">Learn More</a>
             </div>
         </div>
+        <div class="img"></div>
     </section>
 
     <section class="contact">
@@ -62,10 +63,10 @@
                     <input type="text" id="name">
                 </div>
                 <div>
-                    <label for="email">Name</label>
+                    <label for="email">Email</label>
                     <input type="text" id="email">
                 </div>
-                <div>
+                <div class="textarea">
                     <label for="message">Message</label>
                     <textarea name="" id="message" cols="30" rows="10"></textarea>
                 </div>
@@ -74,6 +75,9 @@
         </form>
 
     </section>
+
+
+
     <footer>
         <ul>
             <li>
